--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -27,7 +27,7 @@
 
         // This code will run at DOMContentLoaded
         document.addEventListener('DOMContentLoaded', function() {
-            setTimeout(fetchViewportCreators, 0);
+            fetchViewportCreators();
         });
 
         // This code will run at onLoad
