--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -7,6 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="neededByLayout.css" />
+
+        <!-- Script that will be executed to generate a breadcrumb -->
+        <script src="breadcrumb.js"></script>
+
         <script>
         function sleep(milliseconds){
             var start = new Date().getTime();
