update to include an execute by visual page done example

--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -36,7 +36,7 @@
 
         // This code will run at onLoad
         function loadStuffLate(){
-          sleep(200);
+          //sleep(200);
 
           // Fetch an out of viewport image late
           var imageNode = document.createElement('img');
