--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -12,8 +12,19 @@
         <script src="breadcrumb.js"></script>
 
         <script>
+        
+        function sleep(milliseconds){
+            var start = new Date().getTime();
+            var keep_looping = true;
+            while (keep_looping) {
+              if ((new Date().getTime() - start)> milliseconds) {
+                keep_looping = false;
+              }
+            }
+        }
 
         function fetchViewportCreators() {
+            sleep(1000);
             var scriptLoader = document.createElement('script');
             scriptLoader.type = 'application/javascript';
             scriptLoader.src = 'inviewportCreatorBeforeDCLEE.js';
