--- a/prefetch_with_stored_credentials.html
+++ b/prefetch_with_stored_credentials.html
@@ -19,7 +19,7 @@
       function callOtherDomain(){
         if(invocation) {
           invocation.open('GET', url, true);
-          invocation.withCredentials = false;
+          invocation.withCredentials = true;
           invocation.send();
         }
       }
