--- a/prefetch_with_stored_credentials.html
+++ b/prefetch_with_stored_credentials.html
@@ -12,18 +12,20 @@
           }
         }
       }
-      sleep(1500);
+      sleep(1000);
       var invocation = new XMLHttpRequest();
       var url = 'http://ec2-23-20-68-48.compute-1.amazonaws.com/cors/with_credentials.png';
 
-      function callOtherDomain(){
+      function callOtherDomain(allowStoredCredentials){
         if(invocation) {
-          invocation.open('GET', url, true);
-          invocation.withCredentials = true;
+          local_url = url + '?rand=' + Math.random();
+          invocation.open('GET', local_url, true);
+          invocation.withCredentials = allowStoredCredentials;
           invocation.send();
         }
       }
-      callOtherDomain();
+      callOtherDomain(true);
+      callOtherDomain(false);
       </script>
   </body>
 </html>
