--- a/allowStoredCredentials/preconnect_test.html
+++ b/allowStoredCredentials/preconnect_test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-<h1>Page with one xmlhttprequest</h1>
+<h1>Page with two singleton xmlhttprequest</h1>
     <script type="text/javascript">
       function sleep(milliseconds){
         var start = new Date().getTime();
