--- a/allowStoredCredentials/prefetch_with_stored_credentials.html
+++ b/allowStoredCredentials/prefetch_with_stored_credentials.html
@@ -16,7 +16,7 @@
 
       function callOtherDomain(allowStoredCredentials){
         var invocation = new XMLHttpRequest();
-        var url = 'http://ec2-23-20-68-48.compute-1.amazonaws.com/cors/with_credentials.png';
+        var url = 'https://ihstestcontent.dev.ihs.viasat.io/cors/with_credentials.png';
         if(invocation) {
           local_url = url + '?allowStoredCredentials=' + allowStoredCredentials;
           invocation.open('GET', local_url, true);
