--- a/prefetch_via_disk.html
+++ b/prefetch_via_disk.html
@@ -14,7 +14,7 @@
       }
       sleep(1500);
       var invocation = new XMLHttpRequest();
-      var url = 'http://ec2-23-20-68-48.compute-1.amazonaws.com/with_credentials.png';
+      var url = 'https://ihstestcontent.dev.ihs.viasat.io/with_credentials.png';
 
       function callOtherDomain(){
         if(invocation) {
