--- a/show_rand_date.html
+++ b/show_rand_date.html
@@ -7,17 +7,17 @@
   <body>
 <h1>Calls to Math.random()</h1>
     <script type="text/javascript">
-      document.write("<p> + Math.random() + "</p>");
-      document.write("<p> + Math.random() + "</p>");
-      document.write("<p> + Math.random() + "</p>");
-      document.write("<p> + Math.random() + "</p>");
+      document.write("<p>" + Math.random() + "</p>");
+      document.write("<p>" + Math.random() + "</p>");
+      document.write("<p>" + Math.random() + "</p>");
+      document.write("<p>" + Math.random() + "</p>");
     </script>
 <h1>Calls to Date()</h1>
     <script type="text/javascript">
-      document.write("<p> + Date() + "</p>");
-      document.write("<p> + Date() + "</p>");
-      document.write("<p> + Date() + "</p>");
-      document.write("<p> + Date() + "</p>");
+      document.write("<p>" + Date() + "</p>");
+      document.write("<p>" + Date() + "</p>");
+      document.write("<p>" + Date() + "</p>");
+      document.write("<p>" + Date() + "</p>");
     </script>
   </body>
 </html>
