--- a/show_rand_date.html
+++ b/show_rand_date.html
@@ -14,10 +14,10 @@
     </script>
 <h1>Calls to Date()</h1>
     <script type="text/javascript">
-      document.write("<p>" + Date() + "</p>");
-      document.write("<p>" + Date() + "</p>");
-      document.write("<p>" + Date() + "</p>");
-      document.write("<p>" + Date() + "</p>");
+      document.write("<p>" + Date.now() + "</p>");
+      document.write("<p>" + Date.now() + "</p>");
+      document.write("<p>" + Date.now() + "</p>");
+      document.write("<p>" + Date.now() + "</p>");
     </script>
   </body>
 </html>
