--- a/sitelists/top_from_beer.html
+++ b/sitelists/top_from_beer.html
@@ -40,7 +40,7 @@ p {
     
     <p><a href="chrome://chrome/settings/clearBrowserData">clearbrowserdata</a></p>
 
-<p><a href="set cookie constant test/">https://ihstestcontent.dev.ihs.viasat.io/cookie_aware/set_cookie_constant.html
+<p><a href="https://ihstestcontent.dev.ihs.viasat.io/cookie_aware/set_cookie_constant.html">https://ihstestcontent.dev.ihs.viasat.io/cookie_aware/set_cookie_constant.html
 <</a></p>
 <p><a href="https://www.google.com/">https://www.google.com/</a></p>
 <p><a href="http://www.google.com/">http://www.google.com/</a></p>
